--- a/fitur4.html
+++ b/fitur4.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -26,6 +27,16 @@
       font-size: 1.4em;
       margin: 0 0 20px;
       color: #333;
+    }
+
+    .alert-local {
+      background: #fff3cd;
+      border: 1px solid #ffeaa7;
+      color: #856404;
+      padding: 12px;
+      border-radius: 8px;
+      margin-bottom: 16px;
+      font-size: 0.95em;
     }
 
     .back-home {
@@ -216,6 +227,14 @@
   <div class="container">
     <h1>🔢 kamar</h1>
 
+    <!-- 🔔 PERINGATAN JIKA DIAKSES DARI FILE LOKAL -->
+    <div id="local-warning" class="alert-local" style="display:none;">
+      ⚠️ Kamu membuka file ini secara lokal (<code>file://</code>).<br>
+      <strong>Firebase TIDAK AKAN BERJALAN!</strong><br>
+      Untuk menyimpan data, akses via:<br>
+      <code>https://namagithub.github.io/nomoromosse/fitur4.html</code>
+    </div>
+
     <div class="back-home">
       <a href="index.html">🔙 Kembali ke Beranda</a>
     </div>
@@ -236,6 +255,16 @@
   </div>
 
   <script type="module">
+    // 🔍 DETEKSI AKSES FILE LOKAL
+    if (window.location.protocol === 'file:') {
+      document.getElementById('local-warning').style.display = 'block';
+      // Nonaktifkan tombol simpan
+      setTimeout(() => {
+        const saveBtn = document.getElementById('btn-save-all');
+        if (saveBtn) saveBtn.disabled = true;
+      }, 100);
+    }
+
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getDatabase, ref, set, remove, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
@@ -355,14 +384,12 @@
       return `${day}/${month}`;
     }
 
-    // 🔹 BUAT SATU INSTANS (DIPERBAIKI: gunakan instanceId konsisten)
     function createKamarInstance(isOriginal = false, savedData = null) {
       const currentId = instanceCounter++;
       const div = document.createElement('div');
       div.className = 'kamar-instance';
-      div.dataset.instanceId = currentId; // 🔑 simpan ID unik
+      div.dataset.instanceId = currentId;
 
-      // Dropdown market
       const marketSelect = document.createElement('select');
       marketSelect.className = 'market-select';
       MARKETS.forEach(m => {
@@ -374,10 +401,8 @@
       if (savedData && MARKETS.includes(savedData.market)) {
         marketSelect.value = savedData.market;
       }
-
       div.appendChild(marketSelect);
 
-      // Input fields
       const inputs = [
         { label: 'Tanggal Pemutaran Sebelumnya', placeholder: 'Contoh: 10', cls: 'tanggal-sebelum', value: savedData?.tanggalSebelum || '' },
         { label: 'Tanggal Pemutaran Sekarang', placeholder: 'Contoh: 11', cls: 'tanggal-sekarang', value: savedData?.tanggalSekarang || '' },
@@ -395,7 +420,6 @@
         div.appendChild(group);
       });
 
-      // Tabel hasil
       const table = document.createElement('table');
       table.innerHTML = `<thead><tr><th>Kamar</th><th>Rumus Lemah</th></tr></thead><tbody></tbody>`;
       const tbody = table.querySelector('tbody');
@@ -409,7 +433,6 @@
       }
       div.appendChild(table);
 
-      // Tombol per instans
       const btnGroup = document.createElement('div');
       btnGroup.className = 'instance-buttons';
 
@@ -478,7 +501,6 @@
       }
     }
 
-    // 🔹 GLOBAL: Terapkan Semua
     function terapkanSemuaRumus() {
       const instances = document.querySelectorAll('.kamar-instance');
       if (instances.length === 0) {
@@ -492,7 +514,6 @@
       showMessage('✅ Semua rumus diterapkan.');
     }
 
-    // 🔹 Cloning
     function cloneInstance() {
       const container = document.getElementById('instances-container');
       const original = container.querySelector('.kamar-instance');
@@ -512,8 +533,13 @@
       showMessage('🧹 Semua cloning dihapus.');
     }
 
-    // 🔹 Firebase: Simpan Semua (DIPERBAIKI: simpan hasil dengan benar)
     async function saveAllToFirebase() {
+      // Cek akses lokal
+      if (window.location.protocol === 'file:') {
+        showMessage('❌ Akses dari file lokal! Buka via GitHub Pages.', true);
+        return;
+      }
+
       const container = document.getElementById('instances-container');
       const entries = [];
       const dateStr = getFormattedDate();
@@ -532,7 +558,6 @@
         const lalu = inst.querySelector('.result4d-lalu').value.trim();
         const skr4D = inst.querySelector('.result4d-sekarang').value.trim();
 
-        // ✅ Ambil hasil berdasarkan instanceId yang benar
         const hasil = {};
         for (let i = 1; i <= 12; i++) {
           const cell = document.getElementById(`rumus-${instanceId}-${i}`);
@@ -559,12 +584,19 @@
         showMessage('✅ Data tersimpan ke Firebase.');
       } catch (err) {
         console.error('Firebase save error:', err);
-        showMessage('❌ Gagal simpan ke Firebase.', true);
+        let msg = '❌ Gagal simpan ke Firebase.';
+        if (err.code === 'PERMISSION_DENIED') {
+          msg += ' Periksa Firebase Rules.';
+        }
+        showMessage(msg, true);
       }
     }
 
-    // 🔹 Firebase: Hapus Semua
     async function clearAllFromFirebase() {
+      if (window.location.protocol === 'file:') {
+        showMessage('❌ Akses dari file lokal! Buka via GitHub Pages.', true);
+        return;
+      }
       if (!confirm('Yakin hapus semua data kamar di Firebase?')) return;
       try {
         await remove(ref(db, 'generator_2d/kamar'));
@@ -576,7 +608,6 @@
       }
     }
 
-    // 🔹 Firebase: Muat Saat Dibuka
     async function loadFromFirebase() {
       const container = document.getElementById('instances-container');
       container.innerHTML = '';
@@ -617,7 +648,6 @@
       }
     }
 
-    // 🔹 INIT
     function init() {
       loadFromFirebase();
 
@@ -632,4 +662,3 @@
   </script>
 </body>
 </html>
-
