--- a/fitur9.html
+++ b/fitur9.html
@@ -1,10 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dasar Lemah 2D</title>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
+  <!-- Konfigurasi Firebase (harus ada di proyekmu) -->
+  <script src="firebase-config.js"></script>
   <style>
+    /* ... (style tetap sama, tidak diubah) ... */
     body {
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
@@ -29,11 +36,11 @@
       gap: 10px;
       margin: 15px 0;
     }
-    input, button {
+    input, select, button {
       padding: 10px;
       font-size: 16px;
     }
-    input {
+    input, select {
       flex: 1;
       border: 1px solid #ccc;
       border-radius: 4px;
@@ -98,24 +105,38 @@
   <div class="container">
     <h1>Dasar Lemah 2D</h1>
 
+    <!-- Pemilih Market -->
     <div class="input-group">
-      <input type="text" id="input2D" placeholder="Masukkan 2D, contoh: 01" maxlength="2" />
-      <button onclick="generateResult()">Cari</button>
+      <select id="marketSelect" onchange="onMarketChange()">
+        <option value="">Pilih Market</option>
+        <option value="Cambodia">Cambodia</option>
+        <option value="Sidney">Sidney</option>
+        <option value="China">China</option>
+        <option value="Japan">Japan</option>
+        <option value="SGP">SGP</option>
+        <option value="Taiwan">Taiwan</option>
+        <option value="Hongkong">Hongkong</option>
+      </select>
+    </div>
+
+    <div class="input-group">
+      <input type="text" id="input2D" placeholder="Masukkan 2D, contoh: 01" maxlength="2" disabled />
+      <button onclick="generateResult()" disabled id="btnCari">Cari</button>
     </div>
 
     <div class="result" id="resultBox">
       <div>2D: <strong id="show2D">--</strong></div>
       <div>Dasar Lemah: <strong id="showDasar">--</strong></div>
       <div class="actions">
-        <button class="btn-home" onclick="saveEntry()">Simpan</button>
-        <button onclick="editEntry()">Edit</button>
-        <button class="btn-delete" onclick="deleteEntry()">Hapus</button>
+        <button class="btn-home" onclick="saveEntry()" id="btnSimpan">Simpan</button>
+        <button onclick="editEntry()" id="btnEdit">Edit</button>
+        <button class="btn-delete" onclick="deleteEntry()" id="btnHapus">Hapus</button>
       </div>
     </div>
 
     <div class="saved-list" id="savedList">
       <h3>Data Tersimpan</h3>
-      <!-- Daftar akan diisi oleh JS -->
+      <p><em>Pilih market untuk memuat data.</em></p>
     </div>
 
     <div style="text-align: center; margin-top: 20px;">
@@ -126,7 +147,7 @@
   </div>
 
   <script>
-    // === RANDOM TERKENDALI (SEED FIX) ===
+    // === RANDOM TERKENDALI (TETAP SAMA) ===
     function SeededRandom(seed) {
       this.seed = seed % 2147483647;
       if (this.seed <= 0) this.seed += 2147483646;
@@ -138,7 +159,6 @@
       return (this.next() - 1) / 2147483646;
     };
 
-    // === GENERATE DASAR LEMAH UNTUK SEMUA 2D ===
     function generateFullWeakMap() {
       const weakMap = {};
       const seed = 12345;
@@ -151,18 +171,90 @@
         const key = num.toString().padStart(2, '0');
         weakMap[key] = [d1, d2];
       }
-
-      // Override khusus
       weakMap['28'] = [3, 4];
       weakMap['82'] = [1, 2];
-
       return weakMap;
     }
 
     const fullWeakMap = generateFullWeakMap();
     let current2D = null;
+    let currentMarket = null;
+    let savedData = {};
 
-    // === TAMPILKAN HASIL ===
+    // === INISIALISASI FIREBASE ===
+    let database;
+    try {
+      const app = firebase.initializeApp(firebaseConfig);
+      database = firebase.database(app);
+    } catch (e) {
+      if (!firebase.apps.length) {
+        console.error("Firebase config missing! Pastikan firebase-config.js ada.");
+      }
+    }
+
+    // === GANTI MARKET ===
+    function onMarketChange() {
+      const select = document.getElementById('marketSelect');
+      currentMarket = select.value;
+      const input2D = document.getElementById('input2D');
+      const btnCari = document.getElementById('btnCari');
+      const btnSimpan = document.getElementById('btnSimpan');
+      const btnEdit = document.getElementById('btnEdit');
+      const btnHapus = document.getElementById('btnHapus');
+
+      if (currentMarket) {
+        input2D.disabled = false;
+        btnCari.disabled = false;
+        loadSavedFromFirebase();
+      } else {
+        input2D.disabled = true;
+        btnCari.disabled = true;
+        btnSimpan.disabled = true;
+        btnEdit.disabled = true;
+        btnHapus.disabled = true;
+        document.getElementById('resultBox').style.display = 'none';
+        current2D = null;
+        savedData = {};
+        document.getElementById('savedList').innerHTML = '<h3>Data Tersimpan</h3><p><em>Pilih market untuk memuat data.</em></p>';
+      }
+    }
+
+    // === MUAT DATA DARI FIREBASE ===
+    function loadSavedFromFirebase() {
+      if (!currentMarket || !database) return;
+
+      const ref = database.ref(`fitur9/${currentMarket}`);
+      ref.on('value', (snapshot) => {
+        savedData = snapshot.val() || {};
+        renderSavedList();
+      }, (error) => {
+        console.error("Gagal memuat data:", error);
+        alert("Gagal memuat data dari cloud.");
+      });
+    }
+
+    // === RENDER DAFTAR TERSIMPAN ===
+    function renderSavedList() {
+      const container = document.getElementById('savedList');
+      let html = '<h3>Data Tersimpan</h3>';
+      if (Object.keys(savedData).length === 0) {
+        html += '<p><em>Tidak ada data tersimpan untuk market ini.</em></p>';
+      } else {
+        html += '<div>';
+        Object.entries(savedData).forEach(([key, [d1, d2]]) => {
+          html += `
+            <div class="saved-item">
+              <span><strong>${key}</strong>: ${d1} & ${d2}</span>
+              <button onclick="useSaved('${key}')" style="padding:4px 8px;font-size:12px;">Pakai</button>
+            </div>
+          `;
+        });
+        html += '</div>';
+      }
+      container.innerHTML = html;
+    }
+
+    // === HASIL PERHITUNGAN ===
     function generateResult() {
       const input = document.getElementById('input2D').value.trim();
       if (!/^\d{1,2}$/.test(input)) {
@@ -182,27 +274,34 @@
       document.getElementById('showDasar').textContent = `${d1} & ${d2}`;
       document.getElementById('resultBox').style.display = 'block';
 
-      // Fokus ulang ke input untuk kenyamanan
-      document.getElementById('input2D').value = key;
+      // Aktifkan tombol aksi
+      document.getElementById('btnSimpan').disabled = false;
+      document.getElementById('btnEdit').disabled = !savedData[key];
+      document.getElementById('btnHapus').disabled = !savedData[key];
     }
 
-    // === SIMPAN ===
+    // === SIMPAN KE FIREBASE ===
     function saveEntry() {
-      if (!current2D) {
-        alert("Tidak ada data untuk disimpan.");
+      if (!current2D || !currentMarket || !database) {
+        alert("Pilih market dan hasilkan data terlebih dahulu.");
         return;
       }
-      const data = JSON.parse(localStorage.getItem('dasar_saved') || '{}');
-      data[current2D] = fullWeakMap[current2D];
-      localStorage.setItem('dasar_saved', JSON.stringify(data));
-      loadSavedList();
-      alert("Data tersimpan.");
+      const [d1, d2] = fullWeakMap[current2D];
+      const ref = database.ref(`fitur9/${currentMarket}/${current2D}`);
+      ref.set([d1, d2])
+        .then(() => {
+          alert("Data tersimpan ke cloud.");
+        })
+        .catch((error) => {
+          console.error("Gagal simpan:", error);
+          alert("Gagal menyimpan ke cloud. Periksa koneksi.");
+        });
     }
 
     // === EDIT ===
     function editEntry() {
-      if (!current2D) {
-        alert("Tidak ada data aktif.");
+      if (!current2D || !currentMarket || !savedData[current2D]) {
+        alert("Tidak ada data tersimpan untuk diedit.");
         return;
       }
       const newData = prompt(`Edit dasar lemah untuk ${current2D} (format: d1,d2, contoh: 5,7)`);
@@ -211,12 +310,16 @@
         if (parts.length === 2 && !isNaN(parts[0]) && !isNaN(parts[1])) {
           const [d1, d2] = parts.map(Number);
           if (d1 >= 1 && d1 <= 9 && d2 >= 1 && d2 <= 9 && d1 !== d2) {
-            const data = JSON.parse(localStorage.getItem('dasar_saved') || '{}');
-            data[current2D] = [d1, d2];
-            localStorage.setItem('dasar_saved', JSON.stringify(data));
-            document.getElementById('showDasar').textContent = `${d1} & ${d2}`;
-            loadSavedList();
-            alert("Data diperbarui.");
+            const ref = database.ref(`fitur9/${currentMarket}/${current2D}`);
+            ref.set([d1, d2])
+              .then(() => {
+                document.getElementById('showDasar').textContent = `${d1} & ${d2}`;
+                alert("Data diperbarui di cloud.");
+              })
+              .catch((error) => {
+                console.error("Gagal edit:", error);
+                alert("Gagal memperbarui data.");
+              });
           } else {
             alert("Nilai harus angka 1–9 dan berbeda.");
           }
@@ -228,56 +331,43 @@
 
     // === HAPUS ===
     function deleteEntry() {
-      if (!current2D) {
-        alert("Tidak ada data aktif.");
+      if (!current2D || !currentMarket || !savedData[current2D]) {
+        alert("Tidak ada data tersimpan untuk dihapus.");
         return;
       }
-      if (confirm(`Hapus data untuk ${current2D}?`)) {
-        const data = JSON.parse(localStorage.getItem('dasar_saved') || '{}');
-        delete data[current2D];
-        localStorage.setItem('dasar_saved', JSON.stringify(data));
-        document.getElementById('resultBox').style.display = 'none';
-        current2D = null;
-        loadSavedList();
-        alert("Data dihapus.");
+      if (confirm(`Hapus data untuk ${current2D} di market ${currentMarket}?`)) {
+        const ref = database.ref(`fitur9/${currentMarket}/${current2D}`);
+        ref.remove()
+          .then(() => {
+            document.getElementById('resultBox').style.display = 'none';
+            current2D = null;
+            alert("Data dihapus dari cloud.");
+          })
+          .catch((error) => {
+            console.error("Gagal hapus:", error);
+            alert("Gagal menghapus data.");
+          });
       }
-    }
-
-    // === MUAT DAFTAR TERSIMPAN ===
-    function loadSavedList() {
-      const data = JSON.parse(localStorage.getItem('dasar_saved') || '{}');
-      const container = document.getElementById('savedList');
-      let html = '<h3>Data Tersimpan</h3>';
-      if (Object.keys(data).length === 0) {
-        html += '<p><em>Tidak ada data tersimpan.</em></p>';
-      } else {
-        html += '<div>';
-        Object.entries(data).forEach(([key, [d1, d2]]) => {
-          html += `
-            <div class="saved-item">
-              <span><strong>${key}</strong>: ${d1} & ${d2}</span>
-              <button onclick="useSaved('${key}')" style="padding:4px 8px;font-size:12px;">Pakai</button>
-            </div>
-          `;
-        });
-        html += '</div>';
-      }
-      container.innerHTML = html;
     }
 
     // === PAKAI DATA TERSIMPAN ===
     function useSaved(key) {
+      if (!savedData[key]) return;
       current2D = key;
-      const [d1, d2] = JSON.parse(localStorage.getItem('dasar_saved'))[key];
+      const [d1, d2] = savedData[key];
       document.getElementById('show2D').textContent = key;
       document.getElementById('showDasar').textContent = `${d1} & ${d2}`;
       document.getElementById('resultBox').style.display = 'block';
       document.getElementById('input2D').value = key;
+
+      // Aktifkan tombol aksi
+      document.getElementById('btnSimpan').disabled = true; // sudah ada
+      document.getElementById('btnEdit').disabled = false;
+      document.getElementById('btnHapus').disabled = false;
     }
 
     // === INISIALISASI ===
     document.addEventListener('DOMContentLoaded', () => {
-      loadSavedList();
       document.getElementById('input2D').addEventListener('keypress', (e) => {
         if (e.key === 'Enter') generateResult();
       });
